# openapi-specification

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .releaserc  BUILD.bazel  CONTRIBUTING.md  README.md  WORKSPACE  package-lock.json  package.json  postman-config.json  tsconfig.json
generator/documentation/: BUILD.bazel  build.ts  helpers.ts  parameters.ts  processors.ts  schema-dependencies-helper.ts  schema.ts
generator/jsonschema/: BUILD.bazel  jsonschema.ts
generator/postman/: BUILD.bazel  postman.ts  stable_id.ts
generator/requests/: BUILD.bazel  requests.ts  snippets.ts  types.ts
generator/responses/: BUILD.bazel  response.ts
rules/: BUILD.bazel  dereference.ts  dist-is-updated.ts  parameters.ts  schema-in-index.ts  schema-title.ts  swagger_cli.bzl
specification/: BUILD.bazel  index.yml
specification/parameters/: _index.yml  departure_time.yml  language.yml  mode.yml  region.yml  transit_mode.yml
specification/parameters/directions/: alternatives.yml  arrival_time.yml  avoid.yml  departure_time.yml  destination.yml  origin.yml  traffic_model.yml  transit_mode.yml  transit_routing_preference.yml  units.yml  waypoints.yml
specification/parameters/distanceMatrix/: avoid.yml  destinations.yml  origins.yml  units.yml
specification/parameters/elevation/: locations.yml  path.yml  samples.yml
specification/parameters/geocode/: address.yml  bounds.yml  components.yml  latlng.yml  location_type.yml  place_id.yml  result_type.yml
specification/parameters/nearestRoads/: points.yml
specification/parameters/places/: components.yml  fields.yml  input.yml  inputtype.yml  keyword.yml  location-required.yml  location-weighted.yml  location.yml  locationbias.yml  locationrestriction.yml  maxheight.yml  maxprice.yml  maxwidth.yml  minprice.yml  name.yml  offset.yml  opennow.yml  origin.yml  pagetoken.yml  photo_reference.yml  photoreference.yml  place_id.yml  query.yml  radius-required  radius.yml  rank_by.yml  rankby.yml  reviewnotranslation.yml  reviewsort.yml  sessiontoken.yml  strictbounds.yml  type.yml  types.yml
specification/parameters/snapToRoads/: interpolate.yml  path.yml
specification/parameters/streetview/: fov.yml  heading.yml  location.yml  pano.yml  pitch.yml  radius.yml  return_error_code.yml  signature.yml  size.yml  size_optional.yml  source.yml
specification/parameters/timezone/: location.yml  timestamp.yml
specification/paths/: _index.yml  directions.yml  distanceMatrix.yml  elevation.yml  geocode.yml  geolocate.yml  nearestRoads.yml  snapToRoads.yml  timezone.yml
specification/paths/places/: autocomplete.yml  details.yml  findplacefromtext.yml  nearbysearch.yml  photo.yml  queryautocomplete.yml  textsearch.yml
specification/paths/streetview/: metadata.yml  static.yml
specification/responses/: maps_http_directions_available_travel_modes_response.xml  maps_http_directions_available_travel_modes_response.yml  maps_http_directions_boston_concord_waypoints_now_response.xml  maps_http_directions_boston_concord_waypoints_now_response.yml  maps_http_directions_boston_concord_waypoints_response.xml  maps_http_directions_boston_concord_waypoints_response.yml  maps_http_directions_boston_concord_waypoints_via_response.xml  maps_http_directions_boston_concord_waypoints_via_response.yml  maps_http_directions_brooklyn_queens_transit_departure_time_response.xml  maps_http_directions_brooklyn_queens_transit_departure_time_response.yml  maps_http_directions_brooklyn_queens_transit_response.xml  maps_http_directions_brooklyn_queens_transit_response.yml  maps_http_directions_chicago_los_angeles_response.xml  maps_http_directions_chicago_los_angeles_response.yml  maps_http_directions_disneyland_response.xml  maps_http_directions_disneyland_response.yml  maps_http_directions_heading_response.xml  maps_http_directions_heading_response.yml  maps_http_directions_invalid_response.xml  maps_http_directions_invalid_response.yml  maps_http_directions_place_id_response.xml  maps_http_directions_place_id_response.yml  maps_http_directions_placed_id_response.xml  maps_http_directions_placed_id_response.yml  maps_http_directions_plus_codes_response.xml  maps_http_directions_plus_codes_response.yml  maps_http_directions_region_toledo_default_response.xml  maps_http_directions_region_toledo_default_response.yml  maps_http_directions_region_toledo_es_response.xml  maps_http_directions_region_toledo_es_response.yml  maps_http_directions_side_of_road_response.xml  maps_http_directions_side_of_road_response.yml  maps_http_directions_sydney_perth_waypoints_latlng_response.xml  maps_http_directions_sydney_perth_waypoints_latlng_response.yml  maps_http_directions_sydney_perth_waypoints_mixed_response.xml  maps_http_directions_sydney_perth_waypoints_mixed_response.yml  maps_http_directions_sydney_perth_waypoints_polyline_response.xml  maps_http_directions_sydney_perth_waypoints_polyline_response.yml  maps_http_directions_toronto_montreal_bicycling_response.xml  maps_http_directions_toronto_montreal_bicycling_response.yml  (+159 more)
specification/schemas/: AddressComponent.yml  AddressComponents.yml  Bounds.yml  CellTower.yml  DirectionsFare.yml  DirectionsGeocodedWaypoint.yml  DirectionsLeg.yml  DirectionsOverviewPolyline.yml  DirectionsPolyline.yml  DirectionsResponse.yml  DirectionsRoute.yml  DirectionsStatus.yml  DirectionsStep.yml  DirectionsTrafficSpeedEntry.yml  DirectionsTransitAgency.yml  DirectionsTransitDetails.yml  DirectionsTransitLine.yml  DirectionsTransitStop.yml  DirectionsTransitVehicle.yml  DirectionsViaWaypoint.yml  DistanceMatrixElement.yml  DistanceMatrixElementStatus.yml  DistanceMatrixObject.yml  DistanceMatrixResponse.yml  DistanceMatrixRow.yml  DistanceMatrixStatus.yml  EditorialSummary.yml  ElevationResponse.yml  ElevationResult.yml  ElevationStatus.yml  Fare.yml  GeocodeStatus.yml  GeocodingGeometry.yml  GeocodingResponse.yml  GeocodingResult.yml  GeocodingStatus.yml  GeolocationRequest.yml  GeolocationResponse.yml  GeolocationV1GeolocatePostRequestBody.yml  GeolocationV1GeolocatePostResponseBody.yml  (+46 more)
specification/schemas/errors/: Error.yml  (+4 more)
(+22 files in other folders)
