load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "dist-is-updated",
    srcs = ["dist-is-updated.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//dir-compare",
        "@npm//tar",
        "@npm//tmp",
        "@npm//yargs",
    ],
)

ts_library(
    name = "schema-in-index",
    srcs = ["schema-in-index.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/glob",
        "@npm//@types/yargs",
        "@npm//glob",
        "@npm//tar",
        "@npm//tmp",
        "@npm//yargs",
    ],
)

ts_library(
    name = "schema-title",
    srcs = ["schema-title.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/glob",
        "@npm//@types/yargs",
        "@npm//yargs",
        "@npm//openapi-types",
    ],
)

ts_library(
    name = "_dereference_lib",
    srcs = ["dereference.ts"],
    deps = [
        "@npm//@apidevtools/json-schema-ref-parser",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//openapi-types",
        "@npm//yargs",
    ],
)

ts_library(
    name = "_parameters_lib",
    srcs = ["parameters.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/glob",
        "@npm//@types/yargs",
        "@npm//glob",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "dereference",
    data = [
        ":_dereference_lib",
    ],
    entry_point = ":dereference.ts",
    templated_args = [
        "--nobazel_node_patches",
        "--bazel_patch_module_resolver",  # https://github.com/bazelbuild/rules_nodejs/issues/2388
    ],
)

nodejs_binary(
    name = "parameters",
    data = [
        ":_parameters_lib",
    ],
    entry_point = ":parameters.ts",
    templated_args = [
        "--nobazel_node_patches",
        "--bazel_patch_module_resolver",  # https://github.com/bazelbuild/rules_nodejs/issues/2388
    ],
)
