load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "_lib",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@apidevtools/json-schema-ref-parser",
        "@npm//@types/json-schema",
        "@npm//@types/node",
        "@npm//@types/unist",
        "@npm//@types/yargs",
        "@npm//mdast-builder",
        "@npm//mdast-util-from-markdown",
        "@npm//mdast-util-gfm",
        "@npm//micromark-extension-gfm",
        "@npm//openapi-types",
        "@npm//prettier",
        "@npm//remark-gfm",
        "@npm//remark-html",
        "@npm//remark-parse",
        "@npm//remark-stringify",
        "@npm//slugify",
        "@npm//tar-stream",
        "@npm//unified",
        "@npm//yargs",
        "@npm//clsx",
    ],
)

nodejs_binary(
    name = "_schema_bin",
    data = [
        ":_lib",
        "//specification:openapi3",
    ],
    entry_point = ":schema.ts",
    templated_args = [
        "--nobazel_node_patches",
        "--bazel_patch_module_resolver",  # https://github.com/bazelbuild/rules_nodejs/issues/2388
    ],
)

genrule(
    name = "schemas",
    srcs = ["//:google-maps-platform-openapi3.json"],
    outs = ["schemas.tar"],
    cmd = "$(location :_schema_bin) " +
          "--spec $(location //:google-maps-platform-openapi3.json) " +
          "--output $@",
    tools = [
        ":_lib",
        ":_schema_bin",
    ],
)

nodejs_binary(
    name = "_parameters_bin",
    data = [
        ":_lib",
        "//specification:openapi3",
    ],
    entry_point = ":parameters.ts",
    templated_args = [
        "--nobazel_node_patches",
        "--bazel_patch_module_resolver",  # https://github.com/bazelbuild/rules_nodejs/issues/2388
    ],
)

genrule(
    name = "parameters",
    srcs = ["//:google-maps-platform-openapi3.json"],
    outs = ["parameters.tar"],
    cmd = "$(location :_parameters_bin) " +
          "--spec $(location //:google-maps-platform-openapi3.json) " +
          "--output $@",
    tools = [
        ":_lib",
        ":_parameters_bin",
    ],
)

nodejs_binary(
    name = "schema-dependencies-helper",
    data = [
        ":_lib",
        "//:google-maps-platform-openapi3.json"
    ],
    entry_point = ":schema-dependencies-helper.ts",
    templated_args = [
        "--spec $(rootpath //:google-maps-platform-openapi3.json)",
        "--nobazel_node_patches",
        "--bazel_patch_module_resolver",  # https://github.com/bazelbuild/rules_nodejs/issues/2388
    ],
)