load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "_lib",
    srcs = glob(["**/*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//js-yaml",
        "@npm//postman-code-generators",
        "@npm//postman-collection",
        "@npm//query-string",
        "@npm//tar-stream",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "_snippets_bin",
    data = [
        ":_lib",
        "//specification:openapi3",
    ],
    entry_point = ":snippets.ts",
    templated_args = ["--bazel_patch_module_resolver"],  # https://github.com/bazelbuild/rules_nodejs/issues/2388
)

genrule(
    name = "snippets",
    outs = ["snippets.tar"],
    cmd = "$(location :_snippets_bin) --output $@",
    tools = [
        ":_snippets_bin",
    ],
)
