load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "_lib",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//tar-stream",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "_responses_bin",
    data = [
        ":_lib",
        "//generator/requests:snippets.tar",
    ],
    entry_point = ":response.ts",
    templated_args = [
        "--archive",
        "$(rootpath //generator/requests:snippets.tar)",
        "--skip",
        "maps_http_geolocation_ip",
    ],
)

# genrule(
#     name = "responses",
#     srcs = ["//generator/requests:snippets.tar"],
#     outs = ["responses.tar"],
#     cmd = "$(location :_responses_bin) --archive $(location //generator/requests:snippets.tar) --output $@",
#     tools = [":_responses_bin"],
#     tags = ["manual"],
# )
